@@ -1,2 +1,2 @@
-current = "2456/05/07 05.1505"
+current = "2456/05/07 05.1730"
 # vim: set shiftwidth=2 tabstop=2 expandtab:
